@@ -58,7 +58,7 @@ def show( mainloop=True ):
     if mainloop and createQApp:
         QtCore.QObject.connect( qtapplication, QtCore.SIGNAL( "lastWindowClosed()" ),
                             qtapplication, QtCore.SLOT( "quit()" ) )
-        qtapplication.exec_()    
+        qtapplication.exec_()
 
 
 def new_figure_manager( num, *args, **kwargs ):
@@ -315,26 +315,26 @@ class NavigationToolbar2QT( NavigationToolbar2, QtGui.QWidget ):
         self.canvas.drawRectangle( rect )
         
     def configure_subplots(self):
-		self.adj_window = QtGui.QDialog()
-		win = self.adj_window
-		win.setAttribute(QtCore.Qt.WA_DeleteOnClose)
-		win.setWindowTitle("Subplot Configuration Tool")
-		image = os.path.join( matplotlib.rcParams['datapath'],'matplotlib.png' )
-		win.setWindowIcon(QtGui.QIcon( image ))
+        self.adj_window = QtGui.QDialog()
+        win = self.adj_window
+        win.setAttribute(QtCore.Qt.WA_DeleteOnClose)
+        win.setWindowTitle("Subplot Configuration Tool")
+        image = os.path.join( matplotlib.rcParams['datapath'],'matplotlib.png' )
+        win.setWindowIcon(QtGui.QIcon( image ))
 
-		toolfig = Figure(figsize=(6,3))
-		toolfig.subplots_adjust(top=0.9)
-		canvas = self._get_canvas(toolfig)
-		tool = SubplotTool(self.canvas.figure, toolfig)
+        toolfig = Figure(figsize=(6,3))
+        toolfig.subplots_adjust(top=0.9)
+        canvas = self._get_canvas(toolfig)
+        tool = SubplotTool(self.canvas.figure, toolfig)
 
-		canvas.setParent(win)
-		w = int (toolfig.bbox.width())
-		h = int (toolfig.bbox.height())
+        canvas.setParent(win)
+        w = int (toolfig.bbox.width())
+        h = int (toolfig.bbox.height())
 
-		win.resize(w, h)
-		canvas.setFocus()
-		
-		win.show()
+        win.resize(w, h)
+        canvas.setFocus()
+        
+        win.show()
     
     def _get_canvas(self, fig):
         return FigureCanvasQT(fig)
